--- a/css.file/video.css
+++ b/css.file/video.css
@@ -25,6 +25,8 @@
     }
     .thumbnail-row {
       margin-bottom: 12px;
+      positon: relative;
+
     }
     .video-author,
     .video-stats {
@@ -36,4 +38,17 @@
       grid-template-columns: 1fr 1fr 1fr;
       column-gap: 16px;
       row-gap: 40px;
+    }
+
+    
+
+
+    .video-time {
+      background-color: black;
+      color: white;
+      font-family: Roboto, Arial;
+      position: absolute;
+      bottom: 8px;
+      right: 5px;
+    
     }
