--- a/css.file/video.css
+++ b/css.file/video.css
@@ -12,8 +12,9 @@
     }
   
     .profile-picture {
-    width: 40px;
+    width: 36px;
     border-radius: 50px;
+
     }
   
     .video-title {
@@ -21,11 +22,11 @@
   font-size: 14px;
   font-weight: bold;
   line-height: 20px;
-  margin-bottom: 12px;
+  margin-bottom: 10px;
     }
     .thumbnail-row {
-      margin-bottom: 12px;
-      positon: relative;
+      margin-bottom: 8px;
+      position: relative;
 
     }
     .video-author,
@@ -44,11 +45,18 @@
 
 
     .video-time {
+      font-family: Roboto, Arial;
+      font-size: 12px;
+      font-weight: 500;
       background-color: black;
       color: white;
       font-family: Roboto, Arial;
       position: absolute;
       bottom: 8px;
       right: 5px;
-    
+      padding-left: 4px;
+      padding-left: 4px;
+      padding-top: 4px;
+      padding-bottom: 4px;
+      border-radius: 2px;
     }
