--- a/css.file/video.css
+++ b/css.file/video.css
@@ -39,12 +39,26 @@
       grid-template-columns: 1fr 1fr 1fr;
       column-gap: 16px;
       row-gap: 40px;
+
     }
 
+    @media (max-width: 750px) {
+      .video-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+    }
+
+    @media (min-width: 751px) and (max-width: 999px)
+
+    @media (min-width: 1000px) {
+      .video-grid {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      }
+    }
     
-
-
-    .video-time {
+    
+    
+     .video-time {
       font-family: Roboto, Arial;
       font-size: 12px;
       font-weight: 500;
@@ -54,9 +68,6 @@
       position: absolute;
       bottom: 8px;
       right: 5px;
-      padding-left: 4px;
-      padding-left: 4px;
-      padding-top: 4px;
-      padding-bottom: 4px;
+     padding: 4px;
       border-radius: 2px;
     }
